tests/parser/parser-impl-error.swg
// ============================================================================
// Parser Impl Error
// ============================================================================

impl enum A.B. { } // swc-expected-error {{ParserExpectedTokenFam}}
